[gd_scene load_steps=5 format=3 uid="uid://cd4y56l75yr13"]

[ext_resource type="Script" uid="uid://b8qglwa256lg8" path="res://Scripts/Orbit.gd" id="1_1fuu5"]
[ext_resource type="Script" uid="uid://dw65305324iwv" path="res://Scripts/OrbitOutline.gd" id="2_1fuu5"]
[ext_resource type="Script" uid="uid://b34sml2qw4v2c" path="res://addons/donut_collision_polygon2D/donut_collision_polygon2D.gd" id="2_03wf0"]
[ext_resource type="Script" uid="uid://cook7kkhwn8hg" path="res://Scripts/Orbit/SatelliteTargets.gd" id="4_03wf0"]

[node name="Orbit" type="Area2D" node_paths=PackedStringArray("_orbit_outline", "_satellite_targets")]
rotation = 109.597
script = ExtResource("1_1fuu5")
_orbit_outline = NodePath("Outline")
_satellite_targets = NodePath("SatelliteTargets")

[node name="Outline" type="Node2D" parent="."]
rotation = 161.886
script = ExtResource("2_1fuu5")

[node name="DonutCollider" type="CollisionPolygon2D" parent="."]
polygon = PackedVector2Array(1.53076e-14, -250, 95.6709, -230.97, 176.777, -176.777, 230.97, -95.6709, 250, 0, 230.97, 95.6709, 176.777, 176.777, 95.6709, 230.97, 1.53076e-14, 250, -95.6709, 230.97, -176.777, 176.777, -230.97, 95.6709, -250, 3.06152e-14, -230.97, -95.6709, -176.777, -176.777, -95.6709, -230.97, -4.59227e-14, -250, -2.75536e-14, -150, -57.4025, -138.582, -106.066, -106.066, -138.582, -57.4025, -150, 1.83691e-14, -138.582, 57.4025, -106.066, 106.066, -57.4025, 138.582, 9.18455e-15, 150, 57.4025, 138.582, 106.066, 106.066, 138.582, 57.4025, 150, 0, 138.582, -57.4025, 106.066, -106.066, 57.4025, -138.582, 9.18455e-15, -150, 0.0001, -250)
script = ExtResource("2_03wf0")
radius = 200.0
width = 100.0
quality = 16
metadata/_custom_type_script = "uid://b34sml2qw4v2c"

[node name="SatelliteTargets" type="Node2D" parent="."]
script = ExtResource("4_03wf0")

[node name="Satellites" type="Node2D" parent="."]

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
